# rabids

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code-quality.yml
extensions/cli/: extension.py
src/rabids/: __init__.py  __main__.py  log_config.py  server.py
src/rabids/extension/: manager.py
src/rabids/llm/: base.py
src/rabids/llm/providers/: openai.py
src/scripts/: generate_api_key.py
tests/: conftest.py  test_server.py
tests/llm/: test_openai_provider.py
